<resources>
    <string name="app_name">Repacc</string>
    <string name="url_api">http://192.168.1.5:3004/api/</string>
    <string name="url_socket">http://192.168.1.5:3004</string>
    <string name="ingreso">Ingreso</string>
    <string name="registro">Registro</string>
    <string name="usuario">Usuario</string>
    <string name="inicio_sesion">Inicio Sesión</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarme">Registrarme</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="celular">Número Celular</string>
    <string name="registro_terminos_condiciones">Al registrarse esta aceptando los <a href="https://www.youtube.com/">terminos y condiciones</a> de la aplicación.</string>
    <string name="recuperar_contrasena">Recuperar Contraseña</string>
    <string name="ERROR_RESPONSE">Error de solicitud</string>
    <string name="ERROR_CONEXION">Sin conexión</string>
    <string name="estado_del_trafico">Estado del trafico</string>
    <string name="reportar_accidente">Reportar accidente</string>
    <string name="reportes">Reportes</string>
    <string name="mis_vehiculos">Vehículos</string>
    <string name="perfil">Perfil</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_rh">RH</string>
    <string name="qr">QR</string>
    <string name="direccion">Dirección</string>
    <string name="editar">Editar</string>
    <string name="guardar">Guardar</string>
    <string name="datos_del_conductor">Datos del conductor</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="recibir_notificaciones">Recibir notificaciones</string>
    <string name="pais">País</string>
    <string name="departamento">Departamento</string>
    <string name="municipio">Municipio</string>
    <string name="tipo_de_sangre">Tipo de sangre</string>
    <string name="contactos">Contactos</string>
    <string name="solicitudes">Solicitudes de contacto</string>
    <string name="confirmar">Confirmar</string>
    <string name="rechazar">Rechazar</string>
    <string name="aceptar">Aceptar</string>
    <string name="buscar_usuario">Busqueda de usuario</string>
    <string name="enviar_solicitud">Enviar Solicitud</string>
    <string name="minimo_4_caracteres">Ingrese mas caracteres para la busqueda</string>
    <string name="placa">Placa</string>
    <string name="tipo_vehiculo">Tipo vehiculo</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color_vehiculo">Color vehiculo</string>
    <string name="es_particular">Vehiculo particular</string>
    <string name="falta_datos">Ingrese todos los datos para continuar.</string>
    <string name="title_color_picker">Seleccione el color del vehiculo</string>
    <string name="error_placa">Ingrese la placa del vehiculo</string>
    <string name="error_color_vehiculo">Seleccione el color de su vehiculo</string>
    <string name="title_activity_reporte">Reporte</string>
    <string name="solicitar_servicio">Solicitar servicios</string>
    <string name="numero_heridos">Numero heridos</string>
    <string name="descripcion">Descripción</string>
    <string name="agregar_imagen">Agregar Imagen</string>
    <string name="msj_permiso_ubicacion">Debe aceptar el permiso de ubicación.</string>
    <string name="titulo_encender_gps">Señal GPS</string>
    <string name="activar_gps">No tiene el GPS encendido, desea encender la señal GPS para continuar?</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_encendio_gps">Para reportar debe encender el GPS.</string>
    <string name="no_internet">No tiene conexión a internet.</string>
    <string name="intentar_nuevamente">Obteniendo señal GPS, intente de nuevo.</string>
    <string name="registrar_placa">Registrar placa</string>
    <string name="error_length_placa">Ingrese la placa completa</string>
    <string name="placa_registrada">La placa del vehiculo se encuentra registrada</string>
    <string name="location_empty">Debe indicar ubicación del accidente en el mapa.</string>
    <string name="placas_empty">Debe ingresar las placas de los vehiculos involucrados</string>
    <string name="descripcion_empty">Ingrese una breve descripción del accidente</string>
    <string name="title_activity_reporte_detalle">Map</string>
    <string name="codigo">Código reporte</string>
    <string name="servicios_solicitados">Servicios solicitados</string>
    <string name="title_activity_trafico">Map</string>
    <string name="no_encendio_gps_trafico">Es necesario encender el gps para ver el trafico en su ubicación</string>
    <string name="disponibilidad_agente">Disponibilidad agente:</string>
    <string name="no_actualizo_estado_agente">No se logró actualizar estado, intente nuevamente...</string>
    <string name="no_location">No se logró obtener la ubicación, intente nuevamente...</string>
    <string name="no_gps_activate">Debe iniciar el gps para cambiar estado a disponible</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="desactivar_disponibilidad">Debe cambiar disponibilidad antes de cerrar sesión.</string>
    <string name="actualizar_perfil">Debe actualizar perfil.</string>
    <string name="no_rh">Seleccione tipo de sangre.</string>
    <string name="titulo_notif_report">Reporte: %s</string>
    <string name="resumen_notif_report">Dirección: %s</string>
    <string name="validar_reporte_title">Validación de reporte</string>
    <string name="validar_reporte_msj">A continuación confirme si es un reporte verdadero</string>
    <string name="reporte_valido">Reporte Valido</string>
    <string name="falsa_alarma">Falsa alarma</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seleccionar_clinica">Unidad medica</string>
    <string name="descripcion_de_lo_ocurrido">Descripción de lo ocurrido:</string>
    <string name="valide_reporte">Debe validar el reporte.</string>
    <string name="cantidad_caracteres_codigo_reporte">Ingrese código del reporte.</string>
    <string name="cargar_imagen_reporte">Seleccionar imagen</string>
    <string name="seleccion_carga_imagen">Seleccione de donde desea cargar la imagen:</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="error_load_image">No se logró cargar la imagen.</string>
    <string name="report_error_invalid_image">Imagen no valida.</string>
    <string name="report_error_imageUpdated">No se logró cargar la imagen.</string>
    <string name="channel_description">Canal de notificaciones generales</string>
    <string name="channel_notification_general">general_notification</string>
    <string name="error_message_request_contacts">No se encontrarón solicitudes.</string>
    <string name="error_message_contacts">No se encontraron contactos de emergencia.</string>
    <string name="error_data_empty">Datos no validos</string>
</resources>
