<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dimen_8">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glvPE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imvFotoEdicion"
        android:onClick="changeProfilePic"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/user"
        app:civ_border_overlay="true"
        app:civ_border_color="@android:color/white"
        app:civ_circle_background_color="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/rotarImgPer"
        android:onClick="rotarImagenPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8"
        app:layout_constraintStart_toEndOf="@id/imvFotoEdicion"
        app:layout_constraintTop_toTopOf="@id/imvFotoEdicion"
        app:layout_constraintBottom_toBottomOf="@id/imvFotoEdicion"
        android:src="@android:drawable/ic_menu_rotate"
        android:visibility="gone"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="@id/imvFotoEdicion"
        app:layout_constraintTop_toTopOf="@id/imvFotoEdicion"
        app:layout_constraintEnd_toEndOf="@id/imvFotoEdicion"
        app:layout_constraintBottom_toBottomOf="@id/imvFotoEdicion"/>

    <TextView
        android:id="@+id/tvDatosEdicion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/datos_del_conductor"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imvFotoEdicion"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreEdicion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/nombre"
        app:layout_constraintTop_toBottomOf="@id/tvDatosEdicion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreEdicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="80"
            android:inputType="text|textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsuarioEdicion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/usuario"
        app:layout_constraintTop_toBottomOf="@id/tilNombreEdicion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_8">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsuarioEdicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_sangre"
        app:layout_constraintTop_toTopOf="@id/spiRHEdicion"
        app:layout_constraintBottom_toBottomOf="@id/spiRHEdicion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glvPE"/>

    <Spinner
        android:id="@+id/spiRHEdicion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginTop="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glvPE"
        app:layout_constraintTop_toBottomOf="@+id/tilCelularEdicion" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreoEdicion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:layout_marginTop="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsuarioEdicion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreoEdicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="320" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCelularEdicion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/celular"
        app:layout_constraintTop_toBottomOf="@id/tilCorreoEdicion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_8">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCelularEdicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvNotif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notificaciones"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_8"
        app:layout_constraintTop_toBottomOf="@id/spiRHEdicion"
        app:layout_constraintStart_toStartOf="parent"/>

    <Switch
        android:id="@+id/swRecibNotif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recibir_notificaciones"
        app:layout_constraintTop_toBottomOf="@id/tvNotif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        app:layout_constraintTop_toTopOf="@id/spiPaisNotif"
        app:layout_constraintBottom_toBottomOf="@id/spiPaisNotif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glvPE"/>

    <Spinner
        android:id="@+id/spiPaisNotif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:prompt="@string/pais"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glvPE"
        app:layout_constraintTop_toBottomOf="@id/swRecibNotif" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/departamento"
        app:layout_constraintTop_toTopOf="@id/spiDepNotif"
        app:layout_constraintBottom_toBottomOf="@id/spiDepNotif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glvPE"/>

    <Spinner
        android:id="@+id/spiDepNotif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glvPE"
        app:layout_constraintTop_toBottomOf="@id/spiPaisNotif" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/municipio"
        app:layout_constraintTop_toTopOf="@id/spiMunNotif"
        app:layout_constraintBottom_toBottomOf="@id/spiMunNotif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glvPE"/>

    <Spinner
        android:id="@+id/spiMunNotif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glvPE"
        app:layout_constraintTop_toBottomOf="@id/spiDepNotif" />

</androidx.constraintlayout.widget.ConstraintLayout>