<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_256"
    app:cardCornerRadius="@dimen/dimen_8"
    android:layout_margin="@dimen/dimen_8"
    app:cardElevation="@dimen/dimen_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/itmVeh_foto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="center"
            android:background="@android:color/black"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/black_gradient"
            android:padding="@dimen/dimen_8">

            <TextView
                android:id="@+id/itmVeh_placa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/placa"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/itmVeh_marca"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/itmVeh_marca"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/itmVeh_modelo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/itmVeh_modelo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_18"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>